<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/icons">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/menu4">

            <ScrollView
                android:id="@+id/drawerScrollView"
                android:layout_width="wrap_content"
                android:layout_height="228dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:scrollbars="none">

            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:elevation="0dp"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/avatarImageView"
                    android:layout_width="match_parent"
                    android:layout_height="143dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="91dp"
                    android:contentDescription="@string/avatar"
                    android:scaleType="fitCenter"
                    android:src="@drawable/avatar_1" />

                <TextView
                    android:id="@+id/emailIdTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:foregroundTint="@color/authui_inputTextColorDark"
                    android:gravity="center"
                    android:text="@string/johndoe_abc_com"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/authui_inputTextColorDark" />


                <!--menu-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingLeft="10dp"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingStart="10dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:onClick="launchFavoritos"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/corazon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginStart="20dp"

                            android:gravity="center_vertical"
                            android:text="@string/Mis_promociones"
                            android:textColor="@color/material_green_700"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/divider" />


                    <!--about us
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="launchAboutUs"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/aboutus" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:gravity="center"
                            android:text="About Us"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                    </LinearLayout>-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:onClick="launchCategorias"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_carousel" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginStart="20dp"

                            android:gravity="center_vertical"
                            android:text="@string/categorias"
                            android:textColor="@color/place_autocomplete_prediction_primary_text"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/divider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:onClick="launchHistory"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_update" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginStart="20dp"

                            android:gravity="center_vertical"
                            android:text="@string/history"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp" />

                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:onClick="CerrarSesion"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_exit" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginStart="20dp"

                            android:gravity="center_vertical"
                            android:text="Cerrar sesion"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp" />

                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/divider" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:gravity="center"
                        android:text="@string/pie_menu"
                        android:textAppearance="?android:attr/textAppearanceMedium" />


                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>




    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
